sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1f/errors.dfrouter
Error: Attribute 'pos' in definition of detector_definition 'MQ11Fs2' is empty.
Quitting (on error).
